Refactoring
Signed-off-by: Denis Neuling <denis.neuling@mercedes-benz.com>