@@ -12,20 +12,22 @@
  *
  */
 
-package net.catenax.edc.tests;
+package net.catenax.edc.tests.stepdefs;
 
 import static org.awaitility.Awaitility.await;
 
 import io.cucumber.datatable.DataTable;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
-import java.io.IOException;
 import java.time.Duration;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
+import net.catenax.edc.tests.Connector;
+import net.catenax.edc.tests.api.datamanagement.DataManagementApiClient;
 import net.catenax.edc.tests.data.ContractNegotiation;
 import net.catenax.edc.tests.data.ContractNegotiationState;
 import net.catenax.edc.tests.data.Permission;
@@ -34,34 +36,37 @@ import net.catenax.edc.tests.util.Timeouts;
 import org.junit.jupiter.api.Assertions;
 
 @Slf4j
-public class NegotiationSteps {
+public class NegotiationStepDefs {
 
   private ContractNegotiation lastInitiatedNegotiation;
 
   @When("'{connector}' sends '{connector}' a counter offer without constraints")
-  public void sendOfferWithoutConstraints(Connector sender, Connector receiver, DataTable table)
-      throws IOException {
+  public void sendOfferWithoutConstraints(
+      @NonNull final Connector sender,
+      @NonNull final Connector receiver,
+      @NonNull final DataTable table) {
 
-    final DataManagementAPI dataManagementAPI = sender.getDataManagementAPI();
+    final DataManagementApiClient dataManagementAPI = sender.getDataManagementApiClient();
     final String receiverIdsUrl = receiver.getEnvironment().getIdsUrl() + "/data";
 
     for (Map<String, String> map : table.asMaps()) {
       final String definitionId = map.get("definition id");
       final String assetId = map.get("asset id");
 
-      final Permission permission = new Permission("USE", null, new ArrayList<>());
-      final Policy policy = new Policy("foo", List.of(permission));
+      final Permission permission =
+          Permission.builder().action("USE").constraints(Collections.emptyList()).build();
+      final Policy policy = Policy.builder().id("foo").permission(List.of(permission)).build();
 
-      final String negotiationId =
+      lastInitiatedNegotiation =
           dataManagementAPI.initiateNegotiation(receiverIdsUrl, definitionId, assetId, policy);
 
       // wait for negotiation to complete
       await()
           .pollDelay(Duration.ofMillis(500))
           .atMost(Timeouts.CONTRACT_NEGOTIATION)
-          .until(() -> isNegotiationComplete(dataManagementAPI, negotiationId));
+          .until(() -> isNegotiationComplete(dataManagementAPI, lastInitiatedNegotiation.getId()));
 
-      lastInitiatedNegotiation = dataManagementAPI.getNegotiation(negotiationId);
+      lastInitiatedNegotiation = dataManagementAPI.getNegotiation(lastInitiatedNegotiation.getId());
     }
   }
 
@@ -70,8 +75,9 @@ public class NegotiationSteps {
     Assertions.assertEquals(ContractNegotiationState.DECLINED, lastInitiatedNegotiation.getState());
   }
 
-  private boolean isNegotiationComplete(DataManagementAPI dataManagementAPI, String negotiationId)
-      throws IOException {
+  private boolean isNegotiationComplete(
+      @NonNull final DataManagementApiClient dataManagementAPI,
+      @NonNull final String negotiationId) {
     var negotiation = dataManagementAPI.getNegotiation(negotiationId);
     return negotiation != null
         && Stream.of(
